# middleman

./: build.py
checkers/rust-impl/: Cargo.toml
checkers/rust-impl/src/: checkers.rs
metamanager/: Cargo.toml  listen_to_nums.py  say_nums.py
metamanager/src/: DEPRECATED.rs  main.rs
tictactoe/implementation1/: better_random.py
tictactoe/implementation2/: Cargo.toml  main  main.rs
tictactoe/manager/: Cargo.toml
tictactoe/manager/src/: main.rs
